# novalpie-downloader

./: .gitignore  LICENSE  README.md  browser.py  cache.py  config.py  exporters.py  log  network.py  novalpie.py  novalpie.token  page_content.html  pyproject.toml  run.py  test_meta_simple.py  utils.py  启动GUI.bat  启动GUI.ps1  指导.md
src/novalpie/: __init__.py  browser.py  cache.py  config.py  exporters.py  gui.py  login_cookie.py  network.py  utils.py
src/novalpie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_meta.py  test_meta_simple.py
