[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novalpie"
version = "0.1.0"
description = "Novel downloader for novalpie.cc"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "ebooklib>=0.18",
    "playwright>=1.40.0",
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
novalpie = "novalpie:main"
novalpie-gui = "novalpie.gui:run_gui"

[tool.setuptools.packages.find]
where = ["src"]
